# ALSY-XORG-7

./: Makefile  Makefile.am  Makefile.in  README.md  XorgInputDrivers.md5  app-7.md5  config.sh  font-7.md5  freefont-Makefile.am  git.ident  install.sh  issues.txt
.APP_CONFIG/: Linux-PAM-config.sh  V3-config.sh  XKeyboardConfig.sh  Xorg-Legacy-Font-config.sh  Xorg-Server-config.sh  Xorg-xterm-config.sh  acl-config.sh  attr-config.sh  bison-config.sh  bzip2-config.sh  data-config.sh  expat-config.sh  file-config.sh  flex-config.sh  fontconfig.sh  freedesktop_soft-config.sh  freedesktop_x86-input-config.sh  freefont-config.sh  freefont-install.sh  freetype-config.sh  freetype2-config.sh  gettext-config.sh  gperf-config.sh  graphite2-config.sh  harfbuzz-config.sh  libcap1-config.sh  libcap2-config.sh  libdrm-config.sh  libepoxy-config.sh  libgcrypt-config.sh  libinput-config.sh  libpcap-config.sh  libpng-config.sh  libtirpc-config.sh  libunwind-config.sh  libva-config.sh  libxml2-config.sh  libxslt-config.sh  libxslt-install.sh  mesa-config.sh  (+25 more)
.APP_LISTING/: XORG-7.md5  Xorg-Legacy.md5  XorgInputDrivers.md5  XorgVideoDrivers.md5  app-7.md5  font-7.md5
.APP_MAKEFILE/: acl-Makefile.am  attr-Makefile.am  bison-Makefile.am  bzip2-Makefile.am  expat-Makefile.am  flex-Makefile.am  freefont-Makefile.am  freefont-Makefile.in  freetype2-Makefile.am  libcap1-Makefile.am  libcap2-Makefile.am  libxml2-Makefile.am  libxslt-Makefile.am  lm_sensors-Makefile.am  mesa-Makefile.am  meson-Makefile.am  ncurses-Makefile.am  pam-Makefile.am  readline-Makefile.am  zlib-Makefile.am
(+2 files in other folders)
